Fix from Sebas: New email and align to center

--- a/src/app/styles/home.module.css
+++ b/src/app/styles/home.module.css
@@ -174,6 +174,7 @@
 
 .footerTitle {
   font-weight: bold;
+  text-align: center;
 }
 
 .menuMobile {
